styles.css
html, body {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;     /* Firefox */
}

html::-webkit-scrollbar, body::-webkit-scrollbar {
    display: none; /* Chrome, Safari and Opera */
}

body {
    /* Credits to https://www.shecodes.io/gradients/22 for the gradient*/
    background: radial-gradient(circle at 10% 20%, rgb(222, 168, 248) 0%, rgb(168, 222, 248) 21.8%, rgb(189, 250, 205) 35.6%, rgb(243, 250, 189) 52.9%, rgb(250, 227, 189) 66.8%, rgb(248, 172, 172) 90%, rgb(254, 211, 252) 99.7%); 
    background-color: rgb(99, 86, 216);
    background-attachment: fixed;
    min-height: 100vh;
    margin: 0;
    color: whitesmoke;
    font-family: "JetBrains Mono", monospace;
}

main {
    margin: 0% 2% 0% 4%;
    font-size: 24px;
}

header {
    background: linear-gradient(
        135deg,
        rgba(46, 46, 46, 0.8),
        rgba(10, 10, 10, 0.6)
        );
    border: 1px solid rgba(255, 255, 255, 0.05);
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    margin: 2px;
    position: sticky;
    top: 4px;
}

li img {
    margin: 0px 2px 0px 10px;
    height: 40px;
}

header p {
    margin: 0px 2px 0px 10px;
}

main article{
    padding-bottom: 4%;
}

main p {
    margin-top: -20px;
}

article p, a {
    color: rgb(53, 53, 53);
}

footer {
    padding: 10px;
    background-color: rgba(92, 92, 92, 0.6);
}

footer a {
    font-size: 1vw;
    margin: 1%;
    color: whitesmoke;
}

#spotifyIframe {
    width: 100%;
    height: 152px;
    display: block;
    opacity: 0.9;
    border-radius: 12px;
    border: none;
    background-color: rgba(0, 0, 0, 0.1);
}

#spotifyPlayer {
    width: 50%;
    height: 152px;
    overflow: hidden;
    margin-top: 20px;
    border-radius: 12px;
}

@media (max-width: 768px) {
    body {
        color: black;
    }

    main {
        font-size: 18px;
        margin: 0 5%;
    }

    #spotifyPlayer {
        width: 100%;
    }

    header div {
        justify-content: center !important;
        padding-right: 0 !important;
    }

    ul {
        padding: 0;
        flex-wrap: wrap;
        justify-content: center;
    }
}

